# container-toolkit-mlx

./: .gitignore  CLAUDE.md  Package.swift  README.md
Sources/MLXContainerConfig/: ContainerGPUConfig.swift  ToolkitConfiguration.swift
Sources/MLXContainerDaemon/: DaemonMain.swift  GPUMemoryAllocator.swift  InferenceEngine.swift  MLXInferenceServer.swift  ModelManager.swift
Sources/MLXContainerProtocol/: Messages.swift  Service.swift
Sources/MLXContainerRuntime/: GPUDaemonLifecycle.swift  GPUFlags.swift  GPUVsockRelay.swift
Sources/MLXDeviceDiscovery/: AppleGPUDevice.swift  DeviceDiscovery.swift
Sources/mlx-ctk/: MLXContainerToolkit.swift
Sources/mlx-ctk/Commands/: CDICommand.swift  (+3 more)
Tests/MLXContainerConfigTests/: ConfigTests.swift
Tests/MLXContainerDaemonTests/: GPUMemoryAllocatorTests.swift  ModelManagerTests.swift
Tests/MLXContainerProtocolTests/: ProtocolTests.swift
Tests/MLXDeviceDiscoveryTests/: DeviceDiscoveryTests.swift
client/: pyproject.toml
client/mlx_container/: __init__.py  _grpc_client.py  _vsock.py  inference.py  models.py  types.py
client/mlx_container/compat/: __init__.py  mlx_lm.py  openai.py
client/mlx_container/proto/: __init__.py  mlx_container_pb2.py  mlx_container_pb2_grpc.py
client/tests/: test_proto.py  test_vsock.py
examples/api-server/: server.py
examples/benchmark/: bench.py
examples/chat/: chat.py
examples/embeddings/: embed.py
examples/hello-mlx/: inference.py
images/: Dockerfile.mlx-base  Dockerfile.mlx-python
proto/: mlx_container.proto
tools/: dev-daemon.py  integration-test.py
